Fixed random name

--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -2,7 +2,7 @@
   	<% if @visitor %>
   		Hello, <%= @visitor %>!
   	<% else %>
-      <form action="/hello">
+      <form action="/">
   		  My name is <%= @name %>
         What's your name?
         <input type="text" name="name">
